argocd/backstage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  labels:
    app: backstage
spec:
  ports:
  - name: http
    port: 7007
    targetPort: 7007
  selector:
    app: backstage
