argocd/backstage/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backstage
spec:
  selector:
    app: backstage
  ports:
  - protocol: TCP
    port: 80
    targetPort: 7007
