argocd/backstage/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  annotations:
    external-dns.alpha.kubernetes.io/hostname: backstage.ssang.io
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: backstage.ssang.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backstage
            port:
              number: 80
  tls:
  - hosts:
    - backstage.ssang.io
    secretName: backstage-cert
